--- a/index.css
+++ b/index.css
@@ -26,11 +26,26 @@ body, html {
 }
 
 header {
+    display: flex;
+    flex-direction: row;
     padding: 1rem 2rem;
     background: var(--blue);
     color: var(--off-white);
-    font-size: 2rem;
+    font-size: 1rem;
     font-weight: bold;
+}
+
+.logo {
+    width: 50px;
+    height: 55px;
+    margin: 1rem 1rem 0 0;
+    filter: invert(80%);
+    cursor: pointer;
+    transition: transform 300ms ease-in-out;
+}
+
+.logo:hover {
+    transform: rotate(360deg);
 }
 
 /* main container */
